Изменение структуры, подготовка для heroku

--- a/html_parse/templates/tags.html
+++ b/html_parse/templates/tags.html
@@ -25,7 +25,7 @@
             </form>
 
             <tr>
-                <td colspan="2">{{link}} HTTP-Код: {{status_code}} </td>
+                <td colspan="2">{{link}}{{status_code}} </td>
             </tr>
             </td>
             <tr>{% for tag in tags_answer %}
